InsuranceOrg/force-app/main/default/objects/vlocity_ins__RateBandTier__c/vlocity_ins__RateBandTier__c.object-meta.xml
<CustomObject>
    <description>Represents a tier within a Rate Band such as Member, Member + Spouse or Family. Different rates are quoted to each tier. Master-detail child object of Rate Band (RateBand__c).</description>
    <label>Rate Band Tier</label>
    <nameField>
        <label>Sequence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Band Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>