InsuranceOrg/force-app/main/default/objects/vlocity_ins__RateBandTier__c/fields/vlocity_ins__ColumnHeaderLabel__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ColumnHeaderLabel__c</fullName>
    <label>Column Header Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Self + Spouse</fullName>
            </value>
            <value>
                <fullName>Self + Child</fullName>
            </value>
            <value>
                <fullName>Self + Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>