InsuranceOrg/force-app/main/default/objects/vlocity_ins__RateBandTier__c/fields/vlocity_ins__Multilplier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Multilplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>