InsuranceOrg/force-app/main/default/objects/vlocity_ins__RateBandTier__c/fields/vlocity_ins__RateBandId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RateBandId__c</fullName>
    <label>Rate Band</label>
    <referenceTo>vlocity_ins__RateBand__c</referenceTo>
    <relationshipLabel>Rate Band Tiers</relationshipLabel>
    <relationshipName>Rate_Band_Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>